重構：針對audio模組切割為 core, performance, effects

--- a/media/core_extension_manifest.json
+++ b/media/core_extension_manifest.json
@@ -3,7 +3,9 @@
   "modules": [
     { "name": "Structure Blocks", "url": "blocks/structure.js" },
     { "name": "Visual Blocks", "url": "blocks/visual.js" },
-    { "name": "Audio Blocks", "url": "blocks/audio.js" },
+    { "name": "Audio Core", "url": "blocks/audio_core.js" },
+    { "name": "Audio Performance", "url": "blocks/audio_performance.js" },
+    { "name": "Audio Effects", "url": "blocks/audio_effects.js" },
     { "name": "Custom Audio Blocks", "url": "blocks/audio_custom.js" },
     { "name": "Live Show Blocks", "url": "blocks/live_show.js" },
     { "name": "MIDI Blocks", "url": "blocks/midi.js" },
@@ -12,7 +14,9 @@
     { "name": "Math Blocks", "url": "blocks/math.js" },
     { "name": "Structure Generators", "url": "generators/structure.js", "type": "generator" },
     { "name": "Visual Generators", "url": "generators/visual.js", "type": "generator" },
-    { "name": "Audio Generators", "url": "generators/audio.js", "type": "generator" },
+    { "name": "Audio Core Generators", "url": "generators/audio_core.js", "type": "generator" },
+    { "name": "Audio Performance Generators", "url": "generators/audio_performance.js", "type": "generator" },
+    { "name": "Audio Effects Generators", "url": "generators/audio_effects.js", "type": "generator" },
     { "name": "Live Show Generators", "url": "generators/live_show.js", "type": "generator" },
     { "name": "MIDI Generators", "url": "generators/midi.js", "type": "generator" },
     { "name": "Serial Generators", "url": "generators/serial.js", "type": "generator" },
