重構：針對visual模組切割為 core, geometry, transform

--- a/media/core_extension_manifest.json
+++ b/media/core_extension_manifest.json
@@ -2,7 +2,9 @@
   "version": "1.0.0",
   "modules": [
     { "name": "Structure Blocks", "url": "blocks/structure.js" },
-    { "name": "Visual Blocks", "url": "blocks/visual.js" },
+    { "name": "Visual Core", "url": "blocks/visual_core.js" },
+    { "name": "Visual Geometry", "url": "blocks/visual_geometry.js" },
+    { "name": "Visual Transform", "url": "blocks/visual_transform.js" },
     { "name": "Audio Core", "url": "blocks/audio_core.js" },
     { "name": "Audio Performance", "url": "blocks/audio_performance.js" },
     { "name": "Audio Effects", "url": "blocks/audio_effects.js" },
@@ -13,7 +15,9 @@
     { "name": "UI Blocks", "url": "blocks/ui.js" },
     { "name": "Math Blocks", "url": "blocks/math.js" },
     { "name": "Structure Generators", "url": "generators/structure.js", "type": "generator" },
-    { "name": "Visual Generators", "url": "generators/visual.js", "type": "generator" },
+    { "name": "Visual Core Generators", "url": "generators/visual_core.js", "type": "generator" },
+    { "name": "Visual Geometry Generators", "url": "generators/visual_geometry.js", "type": "generator" },
+    { "name": "Visual Transform Generators", "url": "generators/visual_transform.js", "type": "generator" },
     { "name": "Audio Core Generators", "url": "generators/audio_core.js", "type": "generator" },
     { "name": "Audio Performance Generators", "url": "generators/audio_performance.js", "type": "generator" },
     { "name": "Audio Effects Generators", "url": "generators/audio_effects.js", "type": "generator" },
