--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "synthblockly-stage",
   "displayName": "SynthBlockly Stage",
   "description": "Visualize your music performance with Blockly and Processing.",
-  "version": "0.1.0",
+  "version": "0.9.0",
   "publisher": "simfonia",
+  "icon": "media/icons/icon.png",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/simfonia/SynthBlocklyStage.git"
+  },
   "engines": {
     "vscode": "^1.106.0"
   },
@@ -67,6 +72,7 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
+    "package": "vsce package",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
@@ -76,6 +82,7 @@
     "@types/vscode": "^1.106.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "@vscode/vsce": "^2.15.0",
     "eslint": "^9.0.0",
     "typescript": "^5.0.0"
   }
